k8s/cookbook-tandoor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookbook-app
  namespace: cookbook
  labels:
    app.kubernetes.io/name: cookbook-app
    app: cookbook-app
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: cookbook-app
      app: cookbook-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cookbook-app
        app: cookbook-app
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: cookbook-app
          image: "vabene1111/recipes:1.5.20"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: cookbook-config
              mountPath: /opt/recipes/staticfiles
            - name: cookbook-config
              mountPath: /opt/recipes/mediafiles
            - name: nginx-config
              mountPath: /opt/recipes/nginx/conf.d
      volumes:
        - name: cookbook-config
          persistentVolumeClaim:
            claimName: cookbook-app-nfs-pvc
        - name: nginx-config
          configMap:
            name: cookbook-configmap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookbook-web
  namespace: cookbook
  labels:
    app.kubernetes.io/name: cookbook-web
    app: cookbook-web
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: cookbook-web
      app: cookbook-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cookbook-web
        app: cookbook-web
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: cookbook-web
          image: "nginx:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: cookbook-config
              mountPath: /opt/recipes/staticfiles
            - name: cookbook-config
              mountPath: /opt/recipes/mediafiles
      volumes:
        - name: cookbook-config
          persistentVolumeClaim:
            claimName: cookbook-app-nfs-pvc
        - name: nginx-config
          configMap:
            name: cookbook-configmap
