k8s/cookbook-tandoor/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cookbook-db
  namespace: "cookbook"
  labels:
    app: cookbook-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookbook-db
  template:
    metadata:
      labels:
        app: cookbook-db
    spec:
      containers:
        - name: cookbook-db
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: cookbook-db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: cookbook-db-data
          persistentVolumeClaim:
            claimName: cookbook-db-nfs-pvc
