k8s/cookbook-tandoor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookbook
  namespace: cookbook
spec:
  ingressClassName: nginx
  rules:
  - host: cookbook.local.koryalbert.net
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cookbook-web
                port:
                  number: 80
